fixed combat log being too long, also changed what order combat log is in, and pointed to current round on combat log

--- a/5eCombatTrackerUI/src/app/core/modules/encounter-handler/combat-log/combat-log.component.css
+++ b/5eCombatTrackerUI/src/app/core/modules/encounter-handler/combat-log/combat-log.component.css
@@ -8,6 +8,8 @@ div.combat-log-header h1 {
 
 .combat-log-content {
     padding: 2em;
+    overflow-y: scroll;
+    max-height:400px;
 }
 
 .combat-log-content-item {
